--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-*.iml
-.gradle
-/local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+.idea/
+app/release/
+app/src/test/
+app/src/test/androidTest/
